--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -23,3 +23,23 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/* Solution */
+
+
+.header  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  margin : 0px;
+  padding: 6px;
+  display: flex;
+  gap: 10px;
+}
+
+
+
+
