--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -46,3 +46,35 @@ a {
 ul {
   list-style-type: none;
 }
+
+
+/* Solutions */
+
+.header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 10px 10px;
+  box-sizing: border-box;
+}
+
+.left-part{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+ul {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 8px;
+}
+
+.right-part{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
