--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,28 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+/* Solutions */
+
+.title {
+  text-align: center;
+  margin: 10px 0 32px 0;
+}
+
+.item-container{
+  display: flex;
+  justify-content: center;
+  gap: 26px;
+}
+
+.item1, .item2, .item3, .item4 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  outline: 2px solid red;
+  width: 200px;
+}
+
+.text {
+  text-align: center;
+}
